# datalib

./: .gitignore  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: black.yml  ci_lint.yaml  ci_tests.yaml  code_cov.yml  codecov.yml  flake8.yaml
datalib/: __init__.py
datalib/metrics/: __init__.py  _bootstrap.py  _delinquency.py  _ranking.py  metrics.ipynb
datalib/metrics/_plot/: __init__.py  cap_curve.py  delinquency_curve.py  deliquency_curve.py
datalib/metrics/tests/: test_bootstrap.py  test_ranking.py
datalib/model_selection/: __init__.py  _split.py  model_selection.py  test_model_selection.py
datalib/model_selection/tests/: test_split.py
datalib/tests/: test_delinquency.py  test_ranking.py  test_split.py
datalib/utils/: __init__.py  _ks_2samp.py  nilvo.py  transformer.py  validation.py
datalib/utils/tests/: test_transformer.py  test_validation.py
docs/: conf.py  datalib.metrics.rst  datalib.rst  index.rst
docs/_build/doctrees/: datalib.doctree  datalib.metrics.doctree  datalib.model_selection.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  datalib.html  datalib.metrics.html  datalib.model_selection.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/delinquency/: plot_delinquency_curve.py
examples/deliquency/: README.txt  plot_delinquency_curve.py
examples/metrics/: plot_cap_curve_from_estimator.py  plot_cap_curve_from_predictions.py
examples/metrics/cap_curve/: plot_cap_curve.py
(+10 files in other folders)
