[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
matplotlib = "^3.6.0"
black = "^22.8.0"

[tool.poetry]
name = "datalib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
